Implement Perplexity for Advanced Diagnostics

--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,8 @@ VITE_HEDERA_ACCOUNT_ID=your_hedera_account_id
 VITE_HEDERA_PRIVATE_KEY=your_hedera_private_key
 VITE_HEDERA_NETWORK=testnet
 
+# Perplexity AI Configuration
+VITE_PERPLEXITY_API_KEY=your_perplexity_api_key
+
 # Custom Domain (for Entri integration)
 VITE_CUSTOM_DOMAIN=your-custom-domain.com
